Model Training Updated

--- a/notebooks/data_drift_demo_evidently.ipynb
+++ b/notebooks/data_drift_demo_evidently.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,11 +19,11 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from pandas import DataFrame\n",
     "import numpy as np\n",
-    "# from evidently.dashboard import Dashboard\n",
-    "# from evidently.tabs import DataDriftTab, CatTargetDriftTab\n",
-    "from evidently.pipeline.column_mapping import ColumnMapping\n",
     "from Electric_Vehicle_Prediction.configurations.mongo_db_connection import mongodb_client\n",
+    "from evidently import Report\n",
+    "from evidently.presets import DataDriftPreset, RegressionPreset\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "pd.pandas.set_option(\"display.max_columns\", None)\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4       5.307700e+10  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +242,100 @@
     "data = collection.find({}, {\"_id\": 0, \"index\": 0})\n",
     "df = pd.DataFrame(list(data))\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of columns to drop\n",
+    "drop_columns = [\n",
+    "    \"VIN (1-10)\",\n",
+    "    \"Postal Code\", \n",
+    "    \"Legislative District\",\n",
+    "    \"DOL Vehicle ID\", \n",
+    "    \"2020 Census Tract\", \n",
+    "    \"County\", \n",
+    "    \"State\", \n",
+    "    \"City\", \n",
+    "    \"Electric Utility\", \n",
+    "    \"Vehicle Location\"\n",
+    "]\n",
+    "\n",
+    "# Drop the specified columns\n",
+    "data = df.drop(columns=drop_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_dataset_drift(reference_df: DataFrame,current_df: DataFrame,) -> bool:\n",
+    "    report = Report(metrics=[DataDriftPreset()])\n",
+    "    report.run(reference_data=reference_df, current_data=current_df)\n",
+    "    json_report = report\n",
+    "    return json_report\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'metrics': [DataDriftPreset(type='evidently:metric_container:DataDriftPreset', include_tests=True, columns=None, embeddings=None, embeddings_drift_method=None, drift_share=0.5, method=None, cat_method=None, num_method=None, text_method=None, per_column_method=None, threshold=None, cat_threshold=None, num_threshold=None, text_threshold=None, per_column_threshold=None)], 'metadata': {}, 'tags': [], '_timestamp': None, 'include_tests': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_report = detect_dataset_drift(data[:200000], data[200000:])\n",
+    "print(json_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataDriftPreset(type='evidently:metric_container:DataDriftPreset', include_tests=True, columns=None, embeddings=None, embeddings_drift_method=None, drift_share=0.5, method=None, cat_method=None, num_method=None, text_method=None, per_column_method=None, threshold=None, cat_threshold=None, num_threshold=None, text_threshold=None, per_column_threshold=None)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_report[\"metrics\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evidently import Report\n",
+    "from evidently.presets import DataDriftPreset, RegressionPreset"
    ]
   },
   {
