Model Register on MLFlow

--- a/notebooks/data_drift_demo_evidently.ipynb
+++ b/notebooks/data_drift_demo_evidently.ipynb
@@ -1036,56 +1036,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect_dataset_drift(reference_df: DataFrame,current_df: DataFrame):\n",
     "    report = Report(metrics=[DataDriftPreset()])\n",
     "    report.run(reference_data=reference_df, current_data=current_df)\n",
-    "    json_report = report.items()\n",
-    "    return json_report"
+    "    return report.include_tests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[DataDriftPreset(type='evidently:metric_container:DataDriftPreset', include_tests=True, columns=None, embeddings=None, embeddings_drift_method=None, drift_share=0.5, method=None, cat_method=None, num_method=None, text_method=None, per_column_method=None, threshold=None, cat_threshold=None, num_threshold=None, text_threshold=None, per_column_threshold=None)]"
+       "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json_report = detect_dataset_drift(data[:200000], data[200000:])\n",
-    "json_report"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json_report[0].include_tests"
+    "detect_dataset_drift(data[:200000], data[200000:])"
    ]
   },
   {
