Model Register and tracking on MLFlow Done

--- a/notebooks/Feature_Engineering_and_Model_Training.ipynb
+++ b/notebooks/Feature_Engineering_and_Model_Training.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the dataset: (232230, 17)\n"
+      "Shape of the dataset: (231249, 17)\n"
      ]
     },
     {
@@ -240,7 +240,7 @@
        "4       5.307700e+10  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "4        0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1034,12 +1034,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = data.drop(columns=['Electric Range'])\n",
     "y = data['Electric Range']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -1051,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,36 +1087,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_scal = preprocessor.fit_transform(X)"
+    "X_train_scal = preprocessor.fit_transform(X_train)\n",
+    "X_test_scal = preprocessor.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((232203, 222), (232203,))"
+       "((184977, 197), (184977,))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_scal.shape, y.shape"
+    "X_train_scal.shape, y_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1129,7 @@
     }
    ],
    "source": [
-    "print(type(X_scal))"
+    "print(type(X_train_scal))"
    ]
   },
   {
@@ -1141,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,16 +1162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((185762, 6), (46441, 6))"
+       "((184977, 6), (46245, 6))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1206,48 +1216,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>115835</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL 3</td>\n",
+       "      <th>118530</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>NISSAN</td>\n",
+       "      <td>LEAF</td>\n",
        "      <td>Battery Electric Vehicle (BEV)</td>\n",
        "      <td>Eligibility unknown as battery range has not b...</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15294</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>KIA</td>\n",
-       "      <td>SORENTO</td>\n",
-       "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102242</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL S</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>69900.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8959</th>\n",
+       "      <th>66675</th>\n",
        "      <td>2023</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL 3</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>F-150</td>\n",
        "      <td>Battery Electric Vehicle (BEV)</td>\n",
        "      <td>Eligibility unknown as battery range has not b...</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25863</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>LEXUS</td>\n",
-       "      <td>RZ</td>\n",
+       "      <th>218983</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>TESLA</td>\n",
+       "      <td>MODEL 3</td>\n",
        "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Eligibility unknown as battery range has not b...</td>\n",
+       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33593</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>VOLKSWAGEN</td>\n",
+       "      <td>E-GOLF</td>\n",
+       "      <td>Battery Electric Vehicle (BEV)</td>\n",
+       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36775</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>FOCUS</td>\n",
+       "      <td>Battery Electric Vehicle (BEV)</td>\n",
+       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1261,6 +1271,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>119899</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>RIVIAN</td>\n",
+       "      <td>R1S</td>\n",
+       "      <td>Battery Electric Vehicle (BEV)</td>\n",
+       "      <td>Eligibility unknown as battery range has not b...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103711</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>FORD</td>\n",
+       "      <td>F-150</td>\n",
+       "      <td>Battery Electric Vehicle (BEV)</td>\n",
+       "      <td>Eligibility unknown as battery range has not b...</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131953</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>MAZDA</td>\n",
+       "      <td>CX-90</td>\n",
+       "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
+       "      <td>Not eligible due to low battery range</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146888</th>\n",
        "      <td>2023</td>\n",
        "      <td>TESLA</td>\n",
        "      <td>MODEL Y</td>\n",
@@ -1269,77 +1306,63 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103711</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>FORD</td>\n",
-       "      <td>FUSION</td>\n",
-       "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
-       "      <td>Not eligible due to low battery range</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131953</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>BMW</td>\n",
-       "      <td>I4</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Eligibility unknown as battery range has not b...</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146888</th>\n",
-       "      <td>2025</td>\n",
+       "      <th>121978</th>\n",
+       "      <td>2021</td>\n",
        "      <td>TESLA</td>\n",
        "      <td>MODEL Y</td>\n",
        "      <td>Battery Electric Vehicle (BEV)</td>\n",
        "      <td>Eligibility unknown as battery range has not b...</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>121978</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>HONDA</td>\n",
-       "      <td>CLARITY</td>\n",
-       "      <td>Plug-in Hybrid Electric Vehicle (PHEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>185762 rows × 6 columns</p>\n",
+       "<p>184977 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Model Year   Make    Model                   Electric Vehicle Type  \\\n",
-       "115835        2022  TESLA  MODEL 3          Battery Electric Vehicle (BEV)   \n",
-       "15294         2024    KIA  SORENTO  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
-       "102242        2014  TESLA  MODEL S          Battery Electric Vehicle (BEV)   \n",
-       "8959          2023  TESLA  MODEL 3          Battery Electric Vehicle (BEV)   \n",
-       "25863         2024  LEXUS       RZ          Battery Electric Vehicle (BEV)   \n",
-       "...            ...    ...      ...                                     ...   \n",
-       "119899        2023  TESLA  MODEL Y          Battery Electric Vehicle (BEV)   \n",
-       "103711        2015   FORD   FUSION  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
-       "131953        2024    BMW       I4          Battery Electric Vehicle (BEV)   \n",
-       "146888        2025  TESLA  MODEL Y          Battery Electric Vehicle (BEV)   \n",
-       "121978        2018  HONDA  CLARITY  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
+       "        Model Year        Make    Model  \\\n",
+       "118530        2021      NISSAN     LEAF   \n",
+       "66675         2023        FORD    F-150   \n",
+       "218983        2018       TESLA  MODEL 3   \n",
+       "33593         2019  VOLKSWAGEN   E-GOLF   \n",
+       "36775         2012        FORD    FOCUS   \n",
+       "...            ...         ...      ...   \n",
+       "119899        2025      RIVIAN      R1S   \n",
+       "103711        2022        FORD    F-150   \n",
+       "131953        2024       MAZDA    CX-90   \n",
+       "146888        2023       TESLA  MODEL Y   \n",
+       "121978        2021       TESLA  MODEL Y   \n",
+       "\n",
+       "                         Electric Vehicle Type  \\\n",
+       "118530          Battery Electric Vehicle (BEV)   \n",
+       "66675           Battery Electric Vehicle (BEV)   \n",
+       "218983          Battery Electric Vehicle (BEV)   \n",
+       "33593           Battery Electric Vehicle (BEV)   \n",
+       "36775           Battery Electric Vehicle (BEV)   \n",
+       "...                                        ...   \n",
+       "119899          Battery Electric Vehicle (BEV)   \n",
+       "103711          Battery Electric Vehicle (BEV)   \n",
+       "131953  Plug-in Hybrid Electric Vehicle (PHEV)   \n",
+       "146888          Battery Electric Vehicle (BEV)   \n",
+       "121978          Battery Electric Vehicle (BEV)   \n",
        "\n",
        "        Clean Alternative Fuel Vehicle (CAFV) Eligibility  Base MSRP  \n",
-       "115835  Eligibility unknown as battery range has not b...        0.0  \n",
-       "15294             Clean Alternative Fuel Vehicle Eligible        0.0  \n",
-       "102242            Clean Alternative Fuel Vehicle Eligible    69900.0  \n",
-       "8959    Eligibility unknown as battery range has not b...        0.0  \n",
-       "25863   Eligibility unknown as battery range has not b...        0.0  \n",
+       "118530  Eligibility unknown as battery range has not b...        0.0  \n",
+       "66675   Eligibility unknown as battery range has not b...        0.0  \n",
+       "218983            Clean Alternative Fuel Vehicle Eligible        0.0  \n",
+       "33593             Clean Alternative Fuel Vehicle Eligible        0.0  \n",
+       "36775             Clean Alternative Fuel Vehicle Eligible        0.0  \n",
        "...                                                   ...        ...  \n",
        "119899  Eligibility unknown as battery range has not b...        0.0  \n",
-       "103711              Not eligible due to low battery range        0.0  \n",
-       "131953  Eligibility unknown as battery range has not b...        0.0  \n",
+       "103711  Eligibility unknown as battery range has not b...        0.0  \n",
+       "131953              Not eligible due to low battery range        0.0  \n",
        "146888  Eligibility unknown as battery range has not b...        0.0  \n",
-       "121978            Clean Alternative Fuel Vehicle Eligible        0.0  \n",
+       "121978  Eligibility unknown as battery range has not b...        0.0  \n",
        "\n",
-       "[185762 rows x 6 columns]"
+       "[184977 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
